--- a/interactive/style.css
+++ b/interactive/style.css
@@ -39,15 +39,51 @@
     display: none;
 }
 
-.custom-image{
+.custom-image {
     height: 375px;
     width: 500px;
     object-fit: cover;
+    border: #ffffff;
 }
 
-.custom-image-input,
 #startbutton {
     position: absolute;
     top: 24px;
     left: 24px;
 }
+
+.custom-image-input{
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    color: transparent;
+    z-index: -1;
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+}
+
+.custom-image-input + label {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    font-size: 1.25em;
+    font-weight: 700;
+    color: black;
+    display: inline-block;
+    cursor: pointer;
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.custom-image-input:focus + label,
+.custom-image-input + label:hover {
+    color: red;
+}
+
+/* .custom-image-input:focus + label,
+.custom-image-input.has-focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+} */
