Update border config.

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -49,6 +49,7 @@ body {
 
 .item-image {
   width: 320px;
+  height: 182px;
   object-fit: contain;
 }
 
@@ -157,4 +158,18 @@ label {
 .modal-video-bucket{
   height: 135px;
   overflow: hidden;
+}
+
+.main-page-video{
+  width: 320px;
+  border: none;
+}
+
+.main-page-video-container {
+  height: 182px;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  padding: 0px;
+  border: none;
 }
