--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -136,11 +136,12 @@ label {
 }
 
 #video {
-  background-color: #666;
+  background-color: #000;
 }
 
 #staticpicture {
   display: none;
+  height: 182px;
 }
 
 .hidden-custom-image {
@@ -149,6 +150,7 @@ label {
 
 .custom-image {
   width: 320px;
+  height: 182px;
   border: #ffffff;
   position: absolute;
   top: 0px;
