Update canvas style

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -220,7 +220,11 @@ label {
   height: 182px;
 }
 
+.video-canvas,
 .hidden-custom-image {
+  position: absolute;
+  top: 0px;
+  left: 0px;
   visibility: hidden;
 }
 
