Mock meeting footer

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -26,6 +26,14 @@ body {
   padding-bottom: 100px;
 }
 
+.meeting-footer{
+  text-align: center;
+  height: 39px;
+}
+
+.meeting-footer > img {
+  width: 956px;
+}
 /*****************
   CSS Grid Styles
 *****************/
