--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -294,6 +294,6 @@ label {
 .video-canvas,
 .video-snapshot,
 .main-page-video-container,
-.containter {
+.container {
   border: none !important;
 }
