--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -13,7 +13,6 @@ body {
   background-color: #ffffff;
   border: 1px;
   border-bottom: slategray;
-  border-bottom-style: dotted;
   padding: 20px 20px 20px 20px;
 }
 
@@ -23,10 +22,12 @@ body {
 
 .background2 {
   padding-top: 100px;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   background-color: #000;
-  margin:0;
-  padding:0;
+  width: 1000px;
+  height: 1000px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .meeting-composition {
@@ -36,6 +37,7 @@ body {
   background-color: #000;
   margin: 0 auto;
   padding:0;
+  margin-top: 10px;
 }
 
 .meeting-footer{
@@ -229,6 +231,7 @@ h5,
 h6,
 label {
   color: #34495e;
+  margin-top: 0px;
 }
 
 .l-box {
@@ -327,4 +330,34 @@ label {
   position: absolute;
   bottom: 1.1vh;
   left: 350px;
+}
+
+/* Navigation bar */
+
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #00ACFF;
+  color: white;
 }
