--- a/src/static/css/customattendee.css
+++ b/src/static/css/customattendee.css
@@ -7,7 +7,6 @@
   z-index: 1;
   width: 1000px;
   height: 500px;
-  overflow: auto;
   max-width: 850px;
   min-width: 850px;
   background-color: #fefefe;
@@ -15,8 +14,15 @@
   margin: 0 auto;
   padding: 0;
   position: absolute;
-  top: 45%; left: 50%;
+  top: 48%; left: 50%;
   transform: translate(-50%,-50%);
+  border: #00ACFF;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 6px;
+  overflow: hidden;
+  flex: 1;
+  flex-direction: column;
 }
 
 .modal-content {
@@ -24,6 +30,7 @@
   margin: 0 0;
   padding: 0px;
   width: 100%;
+  height: 500px;
 }
 
 .modal-close {
@@ -65,9 +72,11 @@
 
 .gallery{
   max-width: 900px;
+  height: 400px;
   padding: 0px 25px 25px 25px;
   position: relative;
   margin: 0 auto;
+  overflow-y: scroll;
 }
 
 .modal-label {
