Update generated image

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -45,6 +45,11 @@ body {
   width: 956px;
 }
 
+.hide-scrollbar {
+	overflow: -moz-hidden-unscrollable;
+	overflow: hidden;
+}
+
 /*****************
   CSS Grid Styles
 *****************/
