--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -88,20 +88,6 @@ body {
   grid-template-rows: 270px 270px;
 }
 
-/* generic cell */
-
-/* .item {
-  grid-column: span 2;
-  max-width: 480px;
-  object-fit: contain;
-  overflow: hidden;
-} */
-
-.item-image {
-  width: 320px;
-  object-fit: cover;
-}
-
 .cell {
   grid-column: span 2;
   max-width: 480px;
@@ -113,9 +99,8 @@ body {
 
 .cell-image {
   width: 100%;
-  height: 100%;
   object-fit: cover;
-  border: none;
+  border: none !important;
 }
 
 .cell-fit {
@@ -178,48 +163,6 @@ body {
   width: 960px;
 }
 
-/* 
-  Card Styles
- */
-.card {
-  display: block;
-  border-radius: 5px;
-  border: 0.5px solid #d9d9d9;
-  min-height: 140px;
-  background: white;
-  position: relative;
-  top: 20px;
-  left: 20px;
-  float: left;
-  margin-right: 16px;
-  margin-top: 16px;
-  width: 240px;
-  height: 160px;
-  overflow: hidden;
-}
-
-.card:hover {
-  box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.16);
-}
-
-.card > img {
-  position: relative;
-  display: block;
-  border-radius: 4px 4px 0px 0px;
-  width: 240px;
-  height: 135px;
-  cursor: pointer;
-  object-fit: contain;
-}
-
-.card-text {
-  position: relative;
-  margin-top: 4px;
-  font-weight: bold;
-  text-align: center;
-  text-overflow: ellipsis;
-  border-radius: 0px 0px 6px 6px;
-}
 
 body {
 }
