Make sure we have a pointer cursor

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -313,12 +313,14 @@ label {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  cursor: pointer;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  cursor: pointer;
 }
 
 /* Add a color to the active/current link */
