Update CSS and formatting

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -4,7 +4,7 @@ body {
   overflow-y: hidden;
 }
 
-.meeting-details {
+.light-color-block {
   background-color: #cccdd1;
   border: 1px;
   border-bottom: slategray;
