--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -398,6 +398,13 @@ select {
   margin-top: -9px;
 }
 
+.share-button {
+  margin-top: -9px;
+  margin-left: 15px;
+  background-color: #00ACEE;
+  color: #fff;
+}
+
 .content-block{
   width: 800px;
 }
