--- a/src/static/css/landing.css
+++ b/src/static/css/landing.css
@@ -9,19 +9,14 @@
   -- BASE STYLES --
  * Most of these are inherited from Base, but I want to change a few.
  */
+
 body {
   line-height: 1.7em;
   color: #7f8c8d;
   font-size: 13px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label {
+h1, h2, h3, h4, h5, h6, label {
   color: #34495e;
 }
 
@@ -34,6 +29,7 @@ label {
  * -- LAYOUT STYLES --
  * These are some useful classes which I will need
  */
+
 .l-box {
   padding: 1em;
 }
@@ -61,6 +57,7 @@ label {
  * -- PURE BUTTON STYLES --
  * I want my pure-button elements to look a little different
  */
+
 .pure-button {
   background-color: #1f8dd6;
   color: white;
@@ -85,9 +82,11 @@ a.pure-button-primary {
   text-align: center;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
+
 .home-menu {
   background: #2d3e50;
 }
+
 .pure-menu.pure-menu-fixed {
   /* Fixed menus normally have a border at the bottom. */
   border-bottom: none;
@@ -108,8 +107,8 @@ a.pure-button-primary {
 .home-menu a {
   color: #6fbef3;
 }
-.home-menu li a:hover,
-.home-menu li a:focus {
+
+.home-menu li a:hover, .home-menu li a:focus {
   background: none;
   border: none;
   color: #aecfe5;
@@ -146,6 +145,7 @@ a.pure-button-primary {
 }
 
 /* This is the main heading that appears on the blue section */
+
 .splash-head {
   font-size: 20px;
   font-weight: bold;
@@ -158,6 +158,7 @@ a.pure-button-primary {
 }
 
 /* This is the subheading that appears on the blue section */
+
 .splash-subhead {
   color: white;
   letter-spacing: 0.05em;
@@ -168,6 +169,7 @@ a.pure-button-primary {
  * -- CONTENT STYLES --
  * This represents the content area (everything below the blue section)
  */
+
 .content-wrapper {
   /* These styles are required for the "scroll-over" effect */
   position: absolute;
@@ -179,11 +181,13 @@ a.pure-button-primary {
 }
 
 /* We want to give the content area some more padding */
+
 .content {
   padding: 1em 1em 3em;
 }
 
 /* This is the class used for the main content headers (<h2>) */
+
 .content-head {
   font-weight: 400;
   text-transform: uppercase;
@@ -192,19 +196,23 @@ a.pure-button-primary {
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
+
 .content-head-ribbon {
   color: white;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
+
 .content-subhead {
   color: #1f8dd6;
 }
+
 .content-subhead i {
   margin-right: 7px;
 }
 
 /* This is the class used for the dark-background areas. */
+
 .ribbon {
   background: #2d3e50;
   color: #aaa;
@@ -215,12 +223,12 @@ a.pure-button-primary {
  * On tablets and other medium-sized devices, we want to customize some
  * of the mobile styles.
  */
+
 @media (min-width: 48em) {
   /* We increase the body font size */
   body {
     font-size: 20px;
   }
-
   /* We can align the menu header to the left, but float the
     menu items to the right. */
   .home-menu {
@@ -229,23 +237,19 @@ a.pure-button-primary {
   .home-menu ul {
     float: right;
   }
-
   /* We increase the height of the splash-container */
   /*    .splash-container {
         height: 500px;
     }*/
-
   /* We decrease the width of the .splash, since we have more width
     to work with */
   .splash {
     width: 70%;
     height: 50%;
   }
-
   .splash-head {
     font-size: 250%;
   }
-
   /* We remove the border-separator assigned to .l-box-lrg */
   .l-box-lrg {
     border: none;
@@ -257,6 +261,7 @@ a.pure-button-primary {
  * On desktops and other large devices, we want to over-ride some
  * of the mobile and tablet styles.
  */
+
 @media (min-width: 78em) {
   /* We increase the header font size even more */
   .splash-head {
