--- a/src/static/css/customattendee.css
+++ b/src/static/css/customattendee.css
@@ -121,6 +121,8 @@
 .card-text {
   position: relative;
   margin-top: 4px;
+  font-size: 16px;
+  line-height: 1;
   font-weight: bold;
   text-align: center;
   text-overflow: ellipsis;
