--- a/src/static/css/header.css
+++ b/src/static/css/header.css
@@ -38,6 +38,12 @@
   color: #aecfe5;
 }
 
+
+.pure-menu-selected > .pure-menu-link,
+.pure-menu-selected > .pure-menu-link:visited{
+  color: #fff;
+}
+
 @media (min-width: 48em) {
   /* We can align the menu header to the left, but float the
     menu items to the right. */
