--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -297,6 +297,7 @@ label {
   position: absolute;
   bottom: 1.1vh;
   left: 350px;
+  line-height: 1;
 }
 
 /* Navigation bar */
@@ -354,12 +355,13 @@ select::-ms-expand {
   position: relative;
   display: flex;
   width: 120px;
+  font-size: 18px;
   height: 2em;
   line-height: 2;
   background: #34495e;
   overflow: hidden;
   border-radius: 0.25em;
-  margin-top: -8px;
+  margin-top: -2px;
   margin-left: 10px;
   margin-right: 15px;
 }
